# c-raii

./: .gitignore  CMakeLists.txt  README  README.md  ex-05.c  ex-05sp.c  ex-06.c  ex-08.c  ex-09.c  ex-10.c  ex-11sp.c  ex-15th.c  exception.c  exception.h  printf.h  raii.c  raii.h  raiiConfig.cmake.in  testsuite.sh  unistd.h
.github/: FUNDING.yml
.github/workflows/: ci.yml  ci_centos.yml  ci_cpu-aarch64.yml  ci_cpu-armv7_aarch64.yml  ci_cpu-ppc64le.yml  ci_cpu.yml  ci_macos.yml  ci_qemu.yml  ci_qemu_others.yml  jekyll-gh-pages.yml  release.yml
.github/workflows/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
cmake/: FindCThreads.cmake
docs/: index.md
examples/: CMakeLists.txt  benchmark.c  defer_thread.c  fib.c  generator.c  go_channel.c  go_future_wait.c  go_multi_args.c  go_panic.c  go_reflection.c  go_select.c  go_sleepfor.c  go_slice_ref.c  go_waitgroup.c  map_insert.c  thrd_async.c  thrd_for.c  thrd_spawn_fib.c  thrd_spawn_fib_pool.c  throw_no_try_protected.c  try_catch.c  try_catch_any.c  try_catch_if.c  try_catch_if_sigsegv.c  try_catch_raise.c  try_double_rethrow.c  try_finally.c  try_free_protected.c  try_protect.c  try_protected.c  try_rethrow.c  try_signal_sigfpe.c  try_signal_sigsegv.c  try_unprotected.c  work-steal.c
include/: bitset.h  c89atomic.h  catomic.h  channel.h  coro.h  cthread.h  exception.h  future.h  hashtable.h  json.h  linked.h  map.h  parson.h  raii.h  reflection.h  rpmalloc.h  rtypes.h  swar.h  ub_queue.h  url_http.h  vector.h
include/compat/: dirent.h  poll.h  unistd.h
src/: arena.c  bitset.c  channel.c  coro.c  deque.c  except.c  exception.c  future.c  getopt.c  hashtable.c  http.c  json.c  linked.c  map.c  mman.c  parson.c  preempt.c  raii.c  reflection.c  swar.c  thrd.c  ub_queue.c  url.c  vector.c
tests/: CMakeLists.txt  ex-00sp.c  ex-00ts.c  ex-01.c  ex-02.c  ex-03.c  ex-04.c  ex-05.c  ex-05sp.c  ex-05th.c  ex-05ts.c  ex-06.c  ex-07.c  ex-08.c  ex-09.c  ex-10.c  ex-11.c  ex-11sp.c  ex-11ts.c  ex-12.c  ex-13.c  ex-14.c  ex-14th.c  ex-15.c  ex-15th.c  test-arena.c  test-args_for.c  test-array_of.c  test-base64.c  test-bitset.c  test-channel.c  test-cli_getopt.c  test-cthread.c  test-defer.c  test-exceptions.c  test-future-exception.c  test-future-scope.c  test-future.c  test-hashmap.c  test-http_request.c  (+23 more)
tests/invalid/: 10.json  11.json  12.json  13.json  14.json  15.json  16.json  20.json  21.json  22.json  26.json  28.json  29.json  30.json  31.json  32.json  35.json  36.json  37.json  39.json  4.json  41.json  5.json  6.json  7.json  8.json  9.json
tests/multibody/: basic_multipart.txt
tests/valid/: 10.json  13.json  18.json  19.json  20.json  21.json  22.json  23.json  24.json  25.json  29.json  30.json  31.json  36.json  37.json  38.json  39.json  4.json  41.json  43.json  5.json  8.json  9.json  pass4.json
